--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_screenutil: ^5.9.0
   flutter_credit_card: ^4.0.1
+  font_awesome_flutter: ^10.6.0
+  flutter_stripe: ^9.5.0+1
 
 dev_dependencies:
   flutter_test:
