--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_credit_card: ^4.0.1
   font_awesome_flutter: ^10.6.0
   flutter_stripe: ^9.5.0+1
+  dio: ^5.3.4
 
 dev_dependencies:
   flutter_test:
